WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105154
[chromium] Fix methods in TestRunner that directly modify the settings instead of going through WebPreferences
https://bugs.webkit.org/show_bug.cgi?id=105154
Summary
[chromium] Fix methods in TestRunner that directly modify the settings instea...
jochen
Reported
2012-12-17 01:20:29 PST
[chromium] Fix methods in TestRunner that directly modify the settings instead of going through WebPreferences
Attachments
Patch
(10.99 KB, patch)
2012-12-17 01:22 PST
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2012-12-17 01:22:20 PST
Created
attachment 179701
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-17 01:24:46 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Tony Chang
Comment 3
2012-12-17 09:33:07 PST
Comment on
attachment 179701
[details]
Patch Will these values get reset to defaults?
jochen
Comment 4
2012-12-17 10:39:26 PST
(In reply to
comment #3
)
> (From update of
attachment 179701
[details]
) > Will these values get reset to defaults?
At the end of each test, the WebPreferences::reset() method is invoked and the resulting settings are applied to the WebView - so yes
WebKit Review Bot
Comment 5
2012-12-17 23:59:40 PST
Comment on
attachment 179701
[details]
Patch Clearing flags on attachment: 179701 Committed
r137992
: <
http://trac.webkit.org/changeset/137992
>
WebKit Review Bot
Comment 6
2012-12-17 23:59:44 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug